<resources>
    <string name="app_name">RoomSquad</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_profile">ProfileActivity</string>
    <string name="view_postings">View Postings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="welcome">WELCOME\n</string>
    <string name="login_top">LOGIN\n</string>
    <string name="main_menu_top">MAIN MENU</string>
    <string name="main_menu_bottom">(click to logout)</string>
    <string name="confirm_registry">Email not found. You want to create a new user with that email and password?</string>
    <string name="enter_firstname">Please enter firstname.</string>
    <string name="my_profile">My Profile</string>
    <string name="my_profile_top">MY PROFILE</string>
    <string name="my_profile_bottom">(click to go back to main menu)</string>
    <string name="my_postings">My Postings</string>
    <string name="my_matches">My Matches</string>
    <string name="my_suggestions">My Suggestions</string>
    <string name="my_preferences">My Preferences</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="updatingReport">Updating User</string>
    <string name="title_activity_postings">PostingsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="my_profile_facts">Age:\n\nGender:\n\nSmoking:\n\nOkay with Pets?:\n\nNumber of nights going out:\n\nFull Time Job?:\n\nEarly Riser vs Late Riser:\n\n </string>
    <string name="edit_profile_bottom">(click to go back to My Profile)</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_profile_top">Edit My Profile</string>
    <string name="change_photo">(click on photo to change it)</string>
    <string name="set_birthdate">Set Birthdate</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="upload_profile_photo_top">Upload Profile Photo</string>
    <string name="upload_profile_photo_bottom">(click to go back to Edit My Profile)</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="save_photo">Save Photo</string>
    <string name="my_postings_top">My Postings</string>
    <string name="my_postings_bottom">(click to go back to Main Menu)</string>
    <string name="new_posting">Add New Posting</string>
    <string name="edit_my_posting_top">New Posting</string>
    <string name="edit_my_posting_bottom">(click to save and view posting)</string>
    <string name="set_location">Set Location on Map</string>
    <string name="roommate_posting">Roommate Posting</string>
    <string name="sublet_posting">Sublet Posting</string>
    <string name="tenant_posting">Tenant Posting</string>
    <string name="Location_Default">No location chosen yet</string>
    <string name="my_posting_top">My Posting</string>
    <string name="my_posting_bottom">(click to go back to My Postings)</string>
    <string name="posting_date_edited">Last Edited: </string>
    <string name="my_photo_top">Photo Fullscreen</string>
    <string name="my_photo_bottom">(click to go back to My Posting)</string>
<<<<<<< HEAD
    <string name="title_activity_my_posting_map">Map</string>
    <string name="my_posting_map_top">Location Map</string>
    <string name="my_posting_map_bottom">(click to go back to posting)</string>
    <string name="my_preferences_top">My Preferences</string>
    <string name="my_preferences_bottom">(click to go back to Main Menu)</string>
    <string name="my_suggestions_top">My Suggestions</string>
    <string name="my_suggestions_bottom">(click to go back to Main Menu)</string>
=======
    <string name = "one_two_nights">1-2</string>
    <string name = "three_four_nights">3-4</string>
    <string name = "five_seven_nights">5-7</string>
    <string name="early_riser">Early Riser</string>
    <string name="late_riser">Late Riser</string>
>>>>>>> 2ddd0adaa462938b710af7fac5fe601529516efc
</resources>
