<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/main_menu_top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/menu_bar">
        <TextView
            android:id="@+id/main_menu_top_bar_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_centerInParent="true"
            android:keepScreenOn="true"
            android:text="@string/main_menu_top"
            android:textColor="@drawable/menu_bar_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/main_menu_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/main_menu_top_bar"
        android:layout_above="@+id/main_menu_bottom_bar"
        android:background="@drawable/activity_layout">

        <Button
            android:id="@+id/menu_to_profile_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_pressed"
            android:textColor="@drawable/button_text"
            android:textAlignment="center"
            android:text="@string/my_profile"
            />
        <Button
            android:id="@+id/menu_to_preferences_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/menu_to_profile_button"
            android:background="@drawable/button_pressed"
            android:textColor="@drawable/button_text"
            android:textAlignment="center"
            android:text="@string/my_preferences"
            />
        <Button
            android:id="@+id/menu_to_postings_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/menu_to_preferences_button"
            android:background="@drawable/button_pressed"
            android:textColor="@drawable/button_text"
            android:textAlignment="center"
            android:text="@string/my_postings"
            />
        <Button
            android:id="@+id/menu_to_suggestions_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/menu_to_postings_button"
            android:background="@drawable/button_pressed"
            android:textColor="@drawable/button_text"
            android:textAlignment="center"
            android:text="@string/my_suggestions"
            />
        <Button
            android:id="@+id/menu_to_matches_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/menu_to_suggestions_button"
            android:background="@drawable/button_pressed"
            android:textColor="@drawable/button_text"
            android:textAlignment="center"
            android:text="@string/my_matches"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/main_menu_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/menu_bar">
        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_pressed"
            android:textColor="@drawable/button_text"
            android:textAlignment="center"
            android:text="@string/main_menu_bottom"
            />
    </RelativeLayout>

</RelativeLayout>
