<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/upload_profile_photo_top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/menu_bar">
        <TextView
            android:id="@+id/profile_photo_top_bar_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_centerInParent="true"
            android:keepScreenOn="true"
            android:text="@string/upload_profile_photo_top"
            android:textColor="@drawable/menu_bar_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/upload_profile_photo_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/upload_profile_photo_top_bar"
        android:layout_above="@+id/upload_profile_photo_bottom_bar"
        android:padding="0dp"
        android:background="@drawable/activity_layout">
        <RelativeLayout
            android:id="@+id/uploaded_photo_container"
            android:layout_width="match_parent"
            android:layout_height="400dp">
            <ImageView
                android:id="@+id/targetimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/photo_gallery_button_container"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="0dp"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/photo_gallery_button"
                android:layout_width="191dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_pressed"
                android:textColor="@drawable/button_text"
                android:textAlignment="center"
                android:text="@string/photo_gallery"
                />
            <Button
                android:id="@+id/save_photo_button"
                android:layout_width="191dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/photo_gallery_button"
                android:background="@drawable/button_pressed"
                android:textColor="@drawable/button_text"
                android:textAlignment="center"
                android:text="@string/save_photo"
                />
        </RelativeLayout>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/upload_profile_photo_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/menu_bar">
        <Button
            android:id="@+id/upload_profile_photo_to_edit_profile_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_pressed"
            android:textColor="@drawable/button_text"
            android:textAlignment="center"
            android:text="@string/upload_profile_photo_bottom"
            />
    </RelativeLayout>

</RelativeLayout>
