<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/my_postings_top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/menu_bar">
        <TextView
            android:id="@+id/main_menu_top_bar_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_centerInParent="true"
            android:keepScreenOn="true"
            android:text="@string/my_postings_top"
            android:textColor="@drawable/menu_bar_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/my_postings_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/my_postings_top_bar"
        android:layout_above="@+id/my_postings_bottom_bar"
        android:orientation="vertical"
        android:background="@drawable/activity_layout"
        android:padding = "0dp">
        <RelativeLayout
            android:id="@+id/new_posting_container"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageButton
                android:id="@+id/new_posting_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/add_photo"

                />
            <TextView
                android:id="@+id/new_posting_text"
                android:layout_width="332dp"
                android:layout_height="50dp"
                android:layout_toRightOf="@id/new_posting_button"
                android:text="@string/new_posting"
                android:layout_marginTop="11dp"
                android:textColor="@drawable/regular_text"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </RelativeLayout>
        <ScrollView
            android:id="@+id/my_postings_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="testing">
            <LinearLayout
                android:id="@+id/my_postings_inside_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>


        </ScrollView>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/my_postings_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/menu_bar"
        android:padding="0dp"
        android:layout_margin="0dp">
        <Button
            android:id="@+id/my_postings_to_main_menu_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_pressed"
            android:textColor="@drawable/button_text"
            android:textAlignment="center"
            android:text="@string/my_postings_bottom"
            />
    </RelativeLayout>
</RelativeLayout>
