<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_posting_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/my_posting_top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/menu_bar">
        <TextView
            android:id="@+id/my_posting_top_bar_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_centerInParent="true"
            android:keepScreenOn="true"
            android:text="@string/my_posting_top"
            android:textColor="@drawable/menu_bar_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/content_scroll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/my_posting_top_bar"
        android:layout_above="@+id/my_posting_bottom_bar"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/my_posting_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/activity_layout"
                android:padding = "0dp">
                <RelativeLayout
                    android:id="@+id/posting_type"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp">
                    <TextView android:id="@+id/posting_type_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/roommate_posting"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@drawable/regular_text"
                        android:buttonTint="@drawable/regular_text"/>
                    <TextView android:id="@+id/posting_date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:layout_alignParentRight="true"
                        android:text="@string/posting_date_edited"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@drawable/regular_text"
                        android:buttonTint="@drawable/regular_text"/>

                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/price_and_roomamount"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp">
                    <TextView android:id="@+id/minprice_range_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$0 - "
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@drawable/regular_text"
                        android:buttonTint="@drawable/regular_text"/>
                    <TextView android:id="@+id/maxprice_range_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/minprice_range_text"
                        android:text="$20000 (default)"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@drawable/regular_text"
                        android:buttonTint="@drawable/regular_text"/>
                    <TextView android:id="@+id/room_amount_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:layout_alignParentRight="true"
                        android:text="Amount of rooms not specified yet"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@drawable/regular_text"
                        android:buttonTint="@drawable/regular_text"/>

                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/my_posting_top_content"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:paddingLeft="10dp">
                    <TextView
                        android:id="@+id/my_posting_name"
                        android:layout_width="270dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:text="Posting Name"
                        android:textColor="@drawable/regular_text"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        />
                    <ImageButton
                        android:id="@+id/edit_posting_button"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitXY"
                        android:layout_toRightOf="@id/my_posting_name"
                        android:src="@drawable/edit"
                        />
                    <TextView
                        android:id="@+id/add_photo_text"
                        android:layout_below="@id/edit_posting_button"
                        android:layout_toRightOf="@id/my_posting_name"
                        android:layout_width="130dp"
                        android:layout_height="40dp"
                        android:text="(click to edit posting)"
                        android:textSize="10dp"
                        android:textColor="@drawable/regular_text"/>

                </RelativeLayout>
                <LinearLayout
                    android:id="@+id/photo_scroll_container"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:orientation="horizontal"
                    android:visibility="gone">
                    <HorizontalScrollView
                        android:id="@+id/my_posting_photo_scroll"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:id="@+id/photos_in_scroll"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="30dp"
                            android:layout_marginRight="0dp"
                            android:layout_marginLeft="0dp"
                            android:orientation="horizontal">
                        </LinearLayout>

                    </HorizontalScrollView>
                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/posting_location_container"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:id="@+id/posting_location_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:textAlignment="center"
                        android:textSize="11sp"
                        android:textStyle="bold"
                        android:textColor="@drawable/regular_text"
                        android:text="@string/Location_Default"/>

                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/about_posting_container"
                    android:layout_width="match_parent"
                    android:layout_height="280dp">
                    <TextView
                        android:id="@+id/about_my_posting"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:text="Posting description here"
                        android:textColor="@drawable/regular_text"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        />

                </RelativeLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/fullscreen_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/my_posting_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/menu_bar"
        android:padding="0dp"
        android:layout_margin="0dp">
        <Button
            android:id="@+id/my_posting_to_my_postings_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_pressed"
            android:textColor="@drawable/button_text"
            android:textAlignment="center"
            android:text="@string/my_posting_bottom"
            />
    </RelativeLayout>

</RelativeLayout>
